<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_activity_click_header_height">

        <TextView
            android:id="@+id/selection_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_label"/>

        <TextView
            android:id="@+id/selection_row_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/selection_row_value_margin"
            android:layout_marginStart="@dimen/selection_row_value_margin"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>